update to 6.5.2